--- a/laurent-sewer/angular.json
+++ b/laurent-sewer/angular.json
@@ -89,7 +89,8 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/svg/*"
             ],
             "styles": [
               "src/styles.scss"
